# haskell-ga

./: ga.cabal
GA/: GA.hs  Main.hs
