name:        ga
version:    0.1.0.0
synopsis:    Simple Haskell GA
license:    PublicDomain
license-file:    LICENSE
author:        Gary Pamparà
maintainer:    gary@synthesis.co.za
category:    Artificial Intelligence
build-type:    Simple
cabal-version:    >=1.10

executable ga
  main-is:    GA/Main.hs
  build-depends: base >= 4.6,
                 random-fu == 0.2.4.0,
                 transformers == 0.3.0.0,
                 mtl == 2.1.2,
                 cond == 0.4.0.2
  default-language:    Haskell2010
